--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <!-- 分享网页时显示的标题-QQ-->
     <meta itemprop="name" content="平凡好资源网 | 永久地址发布页" />
     <!-- 分享网页时显示的缩略图-QQ-->
-    <meta itemprop="image" content="/logo/favicon.png" />
+    <meta itemprop="image" content="https://blog.hzyo.cn/cdn/img/8885155.png" />
     <!--分享网页时时显示的内容-QQ-->
     <meta name="description" itemprop="description" content="平凡好资源网 | 永久地址发布页" />
     <!--设置自动适应电脑和手机屏幕-->
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no minimal-ui">
     <!--设置浏览器栏favicon图标-->
-    <link rel="icon" href="/logo/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="https://blog.hzyo.cn/cdn/img/8885155.png" type="image/x-icon" />
     <!--定义搜索引擎爬虫的索引方式-->
     <!--index,follow:可以抓取本页，而且可以顺着本页继续索引别的链接
     noindex,follow:不许抓取本页，但是可以顺着本页抓取索引别的链接
@@ -43,7 +43,7 @@
     -->
     <meta name="robots" content="index,follow">
     <!--引入css文件-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://blog.hzyo.cn/cdn/css/ystyle.css">
 
 </head>
 
@@ -59,7 +59,7 @@
                     <!-- 大标题 -->
                     <h1>Hzyo</h1>
                     <!-- 头像 -->
-                    <a href=""><img src="./assets/img/6.jpg" alt=""></a>
+                    <a href=""><img src="https://blog.hzyo.cn/cdn/img/8885155.png" alt=""></a>
                 </div>
                 <!-- 简介 -->
                 <div class="main-top-Brief">
@@ -91,7 +91,7 @@
                     </a>
                     <a href="https://tv.hzyo.cn/" class="main-bot-nr-kp">
                         <div class="main-bot-nr-kp-k">
-                            <div class="main-bot-nr-kp-k-img"><img src="./assets/img/HBQJJS.jpg" alt="" class="kkk"></div>
+                            <div class="main-bot-nr-kp-k-img"><img src="https://blog.hzyo.cn/cdn/img/1.png" alt="" class="kkk"></div>
                            <div class="main-bot-nr-kp-k-n">
                                <span class="p1">平凡影视</span>
                                <span class="p2">自由观影，畅享精彩</span>
@@ -109,7 +109,7 @@
                     </a>
                     <a href="https://blog.hzyo.cn/fxq/" class="main-bot-nr-kp">
                         <div class="main-bot-nr-kp-k">
-                            <div class="main-bot-nr-kp-k-img"><img src="./assets/img/HBlnYT.jpg" alt="" class="kkk"></div>
+                            <div class="main-bot-nr-kp-k-img"><img src="https://blog.hzyo.cn/cdn/img/2.png" alt="" class="kkk"></div>
                            <div class="main-bot-nr-kp-k-n">
                                <span class="p1">情侣飞行棋</span>
                                <span class="p2">恋爱双人游戏</span>
@@ -118,7 +118,7 @@
                     </a>
                     <a href="https://blog.hzyo.cn/xjj.html" class="main-bot-nr-kp">
                         <div class="main-bot-nr-kp-k">
-                            <div class="main-bot-nr-kp-k-img"><img src="./assets/img/HBQJJS.jpg" alt="" class="kkk"></div>
+                            <div class="main-bot-nr-kp-k-img"><img src="https://blog.hzyo.cn/cdn/img/3.png" alt="" class="kkk"></div>
                            <div class="main-bot-nr-kp-k-n">
                                <span class="p1">随机妹子</span>
                                <span class="p2">在线随机小姐姐</span>
@@ -127,7 +127,7 @@
                     </a>
                     <a href="https://blog.hzyo.cn/bz.html" class="main-bot-nr-kp">
                         <div class="main-bot-nr-kp-k">
-                            <div class="main-bot-nr-kp-k-img"><img src="./assets/img/17.jpg" alt="" class="kkk"></div>
+                            <div class="main-bot-nr-kp-k-img"><img src="https://blog.hzyo.cn/cdn/img/4.png" alt="" class="kkk"></div>
                            <div class="main-bot-nr-kp-k-n">
                                <span class="p1">高清壁纸</span>
                                <span class="p2">壁纸大全，壁纸下载</span>
@@ -136,7 +136,7 @@
                     </a>
                     <a href="https://blog.hzyo.cn/zz.html" class="main-bot-nr-kp">
                         <div class="main-bot-nr-kp-k">
-                            <div class="main-bot-nr-kp-k-img"><img src="./assets/img/HBlnYT.jpg" alt="" class="kkk"></div>
+                            <div class="main-bot-nr-kp-k-img"><img src="https://blog.hzyo.cn/cdn/img/1.png" alt="" class="kkk"></div>
                            <div class="main-bot-nr-kp-k-n">
                                <span class="p1">赞助支持</span>
                                <span class="p2">谢谢你的支持鼓励</span>
